--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
+    id  'kotlin-kapt'
 
 }
 
@@ -75,7 +76,8 @@ dependencies {
 //    implementation 'com.squareup.retrofit:retrofit:2.4.0'
 //    implementation 'com.squareup.retrofit:converter-simplexml:2.4.0'
 
-
+    implementation 'com.github.bumptech.glide:glide:4.4.0'
+    kapt 'com.github.bumptech.glide:compiler:4.4.0'
 
  ///   implementation 'com.squareup.retrofit2:converter-simplexml:latest.version'
 
